Completed about.html.

--- a/css/index.css
+++ b/css/index.css
@@ -268,4 +268,11 @@ footer nav a {
 
 .top-content .text-container button {
     margin-top: 20px;
+    border: 2px solid black;
+    background: white;
+    border-radius: 10px;
+    padding: 8px 20px;
+
+.top-content .text-container img {
+    margin-bottom: 15px;
 }
